Rename docker_runner to ecs_runner [skip ci]
